Fix spacing on service provider filters

--- a/casn-frontend/casn-app/src/app/styles/styles.scss
+++ b/casn-frontend/casn-app/src/app/styles/styles.scss
@@ -84,6 +84,10 @@ body {
   margin-right: 0.1rem;
 }
 
+.mb {
+  margin-bottom: 1rem;
+}
+
 /*******************************************************************
                               Modal
 ********************************************************************/
